[package]
name = "ranking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
derive-new = "0.5.9"
getset = "0.1.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
